<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_common" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="390dp"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/login_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/font_white"
            android:textSize="22sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:src="@drawable/title" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/et_login_input_bg_style"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/login_user_icon" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_user_choose_manager"
                android:textColor="@color/font_white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@null"
                android:src="@drawable/login_user_choose" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_login_input_bg_style"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/login_address_icon" />

            <EditText
                android:id="@+id/etIp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/login_address_hint"
                android:paddingRight="20dp"
                android:textColor="@color/font_white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@null"
                android:src="@drawable/login_user_choose" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_login_input_bg_style"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/login_password_icon" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:digits="@string/digits_password"
                android:gravity="right|center_vertical"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingRight="20dp"
                android:textColor="@color/font_white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@null"
                android:src="@drawable/login_user_choose" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_login_input_bg_style"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/login_port_icon" />

            <EditText
                android:id="@+id/etPort"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/login_port_hint"
                android:paddingRight="20dp"
                android:text="@string/login_port_tmp"
                android:textColor="@color/font_white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@null"
                android:src="@drawable/login_user_choose" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cbSavePassword"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/cb_login_cb_style"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/login_choose_save_password"
                android:textColor="@color/font_white"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/cbAutoLogin"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/cb_login_cb_style"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="12dp"
                android:text="@string/login_choose_auto_login"
                android:textColor="@color/font_white"
                android:textSize="16sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/btLogin"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bt_common_style"
                android:gravity="center"
                android:text="@string/login_bt_login"
                android:textColor="@color/font_white"
                android:textSize="18sp"
                android:visibility="visible" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <Button
                android:id="@+id/btRemote"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bt_common_style"
                android:gravity="center"
                android:text="远程消息测试"
                android:textColor="@color/font_white"
                android:textSize="18sp"
                android:visibility="visible" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_common_style"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="8dp"
                android:text="@string/login_bt_cancel"
                android:textColor="@color/font_white"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btLogin1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_common_style"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="8dp"
                android:text="@string/login_bt_login"
                android:textColor="@color/font_white"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>