<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_common"
    android:orientation="vertical"
    tools:context=".XMPPTestPage" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/bt_back_bg_style"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/main_scene"
            android:textColor="@color/font_white"
            android:textSize="22sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:background="@drawable/bt_scene_add_bg_style" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svPage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:fadingEdge="none"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <EditText
                android:id="@+id/etName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/et_login_input_bg_style"
                android:gravity="center"
                android:hint="@string/scene_add_input_h"
                android:maxLength="4"
                android:padding="5dp"
                android:textColor="@color/font_white"
                android:textSize="20sp" />

            <ListView
                android:id="@+id/lv"
                style="@style/Listview.Nodivider"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:listSelector="@color/transparent"
                android:visibility="visible" />

            <Button
                android:id="@+id/btSet"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/bt_common_style"
                android:gravity="center"
                android:text="@string/scene_add_bt_set"
                android:textColor="@color/font_white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btSave"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/bt_common_style"
                android:gravity="center"
                android:text="@string/scene_add_bt_save"
                android:textColor="@color/font_white"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>